# p9-language-benchmark

./: .gitignore  AggregatedResults.csv  LICENSE  repolist-lang-survey
CSharpPerformanceBenchmark/: Benchmark.cs  CSharpPerformanceBenchmark.csproj  CSharpPerformanceBenchmark.sln  Program.cs  Tests.cs  Timer.cs  UpgradeLog.htm
CppNative/: CMakeLists.txt  Out.hpp  main.cpp
CppNative/Benchmark8/: Benchmark8.hpp  Timer.hpp
CppNative/Tests/: Tests.h
GodotCSharp/: Benchmark.cs  New Game Project.csproj  Tests.cs  Timer.cs  icon.cs  icon.tscn  project.godot
LuaBenchmarks/: benchmarks.lua  maf.lua  tests.lua  timer.lua
New Game Project/: Benchmark.cs  New Game Project.csproj  icon.cs
arcadia-test/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
arcadia-test-new/: out.txt
benchmark-csv-merger/: Program.cs  benchmark-csv-merger.csproj
cry-c#/: Game.cryproject  Sandbox.Game.csproj  autoexec.cfg
cry-c++/: Game.cryproject
godot/: New Game Project.csproj  Scene.tscn  icon.cs  icon.gd  icon.tscn  project.godot  timer.gd
results/: Arcadia (Editor).csv  Cry C# (Editor).csv  Dotnet C# (debug).csv  Dotnet C# (release).csv  Godot C# (editor).csv  Godot C# (release).csv  Mono C# (debug).csv  Mono C# (release).csv  Unity C# (editor).csv  Unity C# (release).csv  Unreal C++ (editor).csv  VisualC++ (debug).csv  VisualC++ (release).csv  WSL C++ (debug).csv  WSL C++ (release).csv
unity/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  packages.config  release-results.csv  results-editor.csv  results-release.csv  results.csv
unreal/: unreal.uproject
(+146 files in other folders)
